--- a/public/vylety/index.html
+++ b/public/vylety/index.html
@@ -115,7 +115,8 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>V článcích jsou fotky, ve velkém rozlišení. Trochu pomaleji se to načítá, ale pak je možné si odtáhnout fotku na plochu a je opravdu veliká a plná detailů.</p>
+    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>V článcích jsou fotky, ve <strong>velkém rozlišení</strong>.<br>
+Trochu pomaleji se to načítá, ale pak je možné si odtáhnout fotku na plochu a je opravdu veliká a plná detailů.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
